# spark-instructor

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  lint.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build-and-test.yml  ci_cd.yml  publish-to-pypi.yml  publish.yml
contributing/: index.html
docs/: contributing.md  index.md  license.md
init/: init-ollama.sh
license/: index.html
reference/SUMMARY/: index.html
reference/client/: index.html
reference/client/base/: index.html
reference/completions/: index.html
reference/completions/anthropic/: index.html
reference/completions/anthropic_completions/: index.html
reference/completions/base/: index.html
reference/completions/databricks/: index.html
reference/completions/databricks_completions/: index.html
reference/completions/ollama_completions/: index.html
reference/completions/openai/: index.html
reference/completions/openai_completions/: index.html
reference/factory/: index.html
reference/factory/anthropic_factory/: index.html
reference/factory/base/: index.html
reference/factory/databricks_factory/: index.html
reference/factory/ollama_factory/: index.html
reference/factory/openai_factory/: index.html
reference/registry/: index.html
reference/response_models/: index.html
reference/types/: index.html
reference/types/base/: index.html
reference/types/openai_types/: index.html
reference/udf/: index.html
reference/udf/instruct/: index.html
reference/udf/message_router/: index.html
reference/utils/: index.html
reference/utils/env/: index.html
reference/utils/image/: index.html
reference/utils/prompt/: index.html
reference/utils/types/: index.html
scripts/: gen_pages.py  lint.py
search/: search_index.json
spark_instructor/: __init__.py  client.py  registry.py  response_models.py  udf.py
spark_instructor/client/: __init__.py  base.py  client.py  openai_client.py
spark_instructor/completions/: __init__.py  anthropic.py  anthropic_completions.py  base.py  databricks.py  ollama_completions.py  openai.py
spark_instructor/factory/: __init__.py  anthropic_factory.py  base.py  databricks_factory.py  ollama_factory.py  openai_factory.py
spark_instructor/types/: __init__.py  base.py  openai_types.py
spark_instructor/udf/: __init__.py  instruct.py  message_router.py
spark_instructor/utils/: __init__.py  env.py  image.py  prompt.py  types.py
stubs/sparkdantic/: model.pyi
tests/: conftest.py  test_client.py  test_completions.py  test_registry.py  test_response_models.py  test_spark_integration.py  test_udf.py
tests/client/: test_client_base.py
tests/factory/: test_anthropic_factory.py  test_o1_factory.py
tests/types/: test_types_base.py
tests/udf/: test_instruct.py  test_message_router.py
tests/utils/: test_images.py  test_prompt.py  test_types.py
theme/: extra.css
