[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "spark-instructor"
version = "0.0.1"
description = "A framework for integrating `instructor` with Spark"
authors = ["Richie Caputo <rcaputo3@tjclp.com>"]

[tool.poetry.dependencies]
python = "^3.10"
instructor = "^1.3.4"
pytest = "^8.2.2"
python-dotenv = "^1.0.1"
sparkdantic = "^0.28.0"

[tool.poetry.dev-dependencies]
black = {version = "^24.4.2", extras = ["jupyter"]}
flake8 = "^7.1.0"
Flake8-pyproject = "^1.2.3"
mypy = "^1.10.1"
isort = "^5.13.2"
pre-commit = "^3.2.1"
pydocstyle = "^6.3.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
safety = "^3.2.4"
sphinx = "^7.3.7"

[tool.mypy]
mypy_path = "stubs"

[tool.poetry.extras]
databricks = ["databricks-connect", "databricks-sdk"]
anthropic = ["anthropic"]

[tool.poetry.group.databricks.dependencies]
databricks-connect = "^15.1.0.dev0"
databricks-sdk = "^0.29.0"

[tool.poetry.group.anthropic.dependencies]
anthropic = "^0.30.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 120

[tool.poetry.scripts]
lint = "lint:main"
